bug fix: fixed overflow problem

--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -1,8 +1,5 @@
 .Layout {
-  //display: flex;
-  //align-items: center;
-  //
-  //@media screen and (max-height: 800px){
-  //   align-items: flex-end;
-  //}
+  @media screen and (max-width: 700px){
+    overflow: hidden;
+  }
 }
