--- a/src/components/WorksTile.scss
+++ b/src/components/WorksTile.scss
@@ -18,7 +18,6 @@
 
     .imageContainer {
       width: 100%;
-      overflow: hidden;
 
       .imageBox {
         padding-bottom: 100%;
